Se cambiaron los directorios js y css a la carpeta dis como sugiere argentina programa.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+        <!-- Bootstrap CSS -->
+
+    <link href="dist/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+    <title>Instalación atada y compilada</title>
 </head>
 <body>
    
     <h1> Esto es una prueba </h1>
+    <h1>Atado y compilado</h1>
+
+      <!-- Bootstrap JS -->
+
+      <script src="dist/bootstrap/js/bootstrap.bundle.js"></script>
     
 </body>
 </html>
