--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sebastián Butticé - Este es mi portafolio</title>
 
         <!-- Bootstrap CSS -->
 
@@ -13,6 +13,21 @@
     <title>Instalación atada y compilada</title>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="https://pbs.twimg.com/profile_images/1114756491/Lindo_400x400.jpg" alt="" width="100" height="100" class="d-inline-block align-text-top"> <h2>Portfolio en Bootstrap</h2>
+          </a>
+          <button type="button" class="btn btn-primary">Primary</button>
+        </div>
+      </nav>
+
+      <!-- acá debería ir una sección hero-->
+
+      <div>
+        
+
+      </div>
    
     <h1> Esto es una prueba </h1>
     <h1>Atado y compilado</h1>
